// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthCard it displays children and title 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root AuthCard-root-1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root AuthCard-title-2"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Some title
      </span>
    </div>
  </div>
  <div>
    any react node
  </div>
</div>
`;

exports[`AuthCard it displays title 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root AuthCard-root-1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root AuthCard-title-2"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Some title
      </span>
    </div>
  </div>
</div>
`;
